attempt to fix scrolling & header on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 body {
   margin: 0;
+  background-color: #ede0d4;
+  overflow: hidden;
 }
 
 body * {
